# learn_cxx

./: .gitignore  CMakeLists.txt
exercises/01_variable&add/: main.cpp
exercises/05_constexpr/: main.cpp
exercises/07_loop/: main.cpp
exercises/08_pointer/: main.cpp
exercises/10_trivial/: main.cpp
exercises/11_method/: main.cpp
exercises/12_method_const/: main.cpp
exercises/13_class/: main.cpp
exercises/14_class_destruct/: main.cpp
exercises/15_class_clone/: main.cpp
exercises/16_class_move/: main.cpp
exercises/17_class_derive/: main.cpp
exercises/19_class_virtual_destruct/: main.cpp
exercises/20_function_template/: main.cpp
exercises/22_class_template/: main.cpp
exercises/23_template_const/: main.cpp
exercises/27_strides/: main.cpp
exercises/30_std_unique_ptr/: main.cpp
exercises/32_std_transform/: main.cpp
exercises/33_std_accumulate/: main.cpp
